# cmake-osx-framework

./: README.md  jenkins.py
Boo/: CMakeLists.txt  boo.cpp
Foo/: CMakeLists.txt
